<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/home_whie"
        android:title="@string/home"
        app:cnb_iconColor="@color/voilet2"
        app:cnb_textColor="@color/voilet2"
        app:cnb_backgroundColor="@color/white"


        />

    <item
        android:id="@+id/group_nav"
        android:icon="@drawable/group_whire"
        android:title="@string/groups"
        app:cnb_iconColor="@color/voilet2"
        app:cnb_textColor="@color/voilet2"

        app:cnb_backgroundColor="@color/white"


        />

    <item
        android:id="@+id/settings_navi"
        android:icon="@drawable/settings_white"
        android:title="@string/settings"
        app:cnb_iconColor="@color/voilet2"
        app:cnb_textColor="@color/voilet2"
        app:cnb_backgroundColor="@color/white"


        />




</menu>
