<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".login_user_page">

    <TextView
        android:id="@+id/top_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_design"
        android:gravity="top"

        />




    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_marginStart="250dp"

        android:fontFamily="sans-serif-black"
        android:text="@string/login"


        android:textColor="#FFFFFF"
        android:textSize="36sp"
        />
    <soup.neumorphism.NeumorphTextView
        android:layout_width="wrap_content"
        android:shadowColor="@color/light_stroke"

        android:layout_height="wrap_content"
        android:background="@drawable/new_user_back"
        android:layout_below="@+id/login_text"
        android:layout_marginStart="250dp"
        android:id="@+id/new_user_back_btn"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_login"
        android:orientation="vertical"
        android:layout_margin="36dp"
        >

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/Widget.Neumorph.CardView"
            app:neumorph_shadowElevation="4dp"
            app:neumorph_shapeType="flat"

            app:neumorph_shadowColorLight="@color/light_stroke"
            app:neumorph_shadowColorDark="@color/dark_stroke"

            >
            <EditText

                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:background="@color/transparent"

                android:drawablePadding="12dp"
                android:ems="10"

                android:hint="@string/email_address"

                android:inputType="textEmailAddress"
                android:lines="10"
                android:padding="10dp"/>
        </soup.neumorphism.NeumorphCardView>




        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/Widget.Neumorph.CardView"
            app:neumorph_shadowElevation="4dp"
            app:neumorph_shapeType="flat"
            android:textSize="20sp"
            android:textColor="@color/text_color"


            app:neumorph_shadowColorLight="@color/light_stroke"
            app:neumorph_shadowColorDark="@color/dark_stroke"
            >
            <EditText

                android:id="@+id/login_password"
                android:textColor="@color/text_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:background="@color/transparent"

                android:drawablePadding="12dp"
                android:ems="10"

                android:hint="@string/password"

                android:inputType="textPassword"
                android:lines="10"
                android:padding="10dp"/>
        </soup.neumorphism.NeumorphCardView>


        <soup.neumorphism.NeumorphButton
            android:id="@+id/login_btn"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:fontFamily="@font/barriecito"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:neumorph_backgroundColor="@color/voilet"

            app:neumorph_shadowColorDark="#D389FE"
            app:neumorph_shadowColorLight="#8F0DDB"
            app:neumorph_shadowElevation="4dp"

            app:neumorph_shapeType="flat" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/barriecito"
            android:text="@string/or"
            android:textColor="@color/text_color"
            android:textSize="26sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/barriecito"
            android:text="@string/login_with"
            android:textColor="@color/text_color"
            android:textSize="36sp" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/google_login_btn"

                android:layout_height="wrap_content"
                android:background="@drawable/google_logo"
                />
            <TextView
                android:id="@+id/facebook_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:background="@drawable/facebook_logo"
                />




        </LinearLayout>










    </LinearLayout>












</RelativeLayout>